--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,9 +27,9 @@ requirements:
     - six
     - joblib >=0.11.0
     - ipywidgets >=5.2.2
-    - ipython >=5.1.0,<6  # [py27 or py34]  # IPython 6.0+ does not support Python 2.6, 2.7, 3.0, 3.1, or 3.2
-    - ipython >=6.0  # [not (py27 or py34)]  # Beginning with IPython 6.0, Python 3.3 and above is required.
-    - pyqt >=5  # [not (py2k or py34)]
+    - ipython >=5.1.0,<6  # [py2k]  # IPython 6.0+ does not support Python 2.6, 2.7, 3.0, 3.1, or 3.2
+    - ipython >=6.0  # [py3k]  # Beginning with IPython 6.0, Python 3.3 and above is required.
+    - pyqt >=5  # [py3k]
     - unittest2  # [py2k]
     - pyqtgraph >=0.10
     - scikit-image >=0.12.3
