--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,7 +20,8 @@ requirements:
     - pytest-runner
   run:
     - python
-    - numpy >=1.13.0
+    - numpy >=1.10
+    - dask >=0.10
     - h5py >=2.6.0
     - matplotlib >=2.0.0
     - psutil
