--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: 46fde88caf97dcdbdc2044382f29b1b2c986bc8f2d74cba14b9007c3187b9403
 
 build:
+  noarch: python
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
@@ -28,8 +29,7 @@ requirements:
     - six
     - joblib >=0.11.0
     - ipywidgets >=5.2.2
-    - ipython >=5.1.0,<6  # [py2k]  # IPython 6.0+ does not support Python 2.6, 2.7, 3.0, 3.1, or 3.2
-    - ipython >=6.0  # [py3k]  # Beginning with IPython 6.0, Python 3.3 and above is required.
+    - ipython >=6.0
     - pillow
 
 test:
