--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
@@ -22,7 +22,7 @@ requirements:
   run:
     - python >=3
     - numpy >=1.10
-    - dask >=0.10
+    - dask-core >=0.10
     - h5py >=2.6.0
     - matplotlib-base >=2.0.0
     - psutil
